--- a/index-org.htm
+++ b/index-org.htm
@@ -6,7 +6,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	
-	
+	<script src="js/jquery-1.2.6.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<script type="text/javascript" charset="utf-8">
 		$(function(){
