--- a/index.htm
+++ b/index.htm
@@ -198,7 +198,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
     <div align="center"></div>
           <table width="500" border="0">
             <tr>
-              <td><div align="right"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591963486/qid=1064849635/sr=1-2/ref=sr_1_2/103-6993674-8547864?v=glance&s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width=179 height=29 x-claris-useimagewidth x-claris-useimageheight border=0 align=bottom /></a></div></td>
+              <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591963486/qid=1064849635/sr=1-2/ref=sr_1_2/103-6993674-8547864?v=glance&s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width=179 height=29 x-claris-useimagewidth x-claris-useimageheight border=0 align=bottom /></a></div></td>
               <td>&nbsp;</td>
               <td><div align="center"><a href="http://www.amazon.com/dp/B007WHS8HQ"target="_blank"><img src="Images/amazon_kindle.png" width="174" height="25" border="0" /></a></div></td>
             </tr>
@@ -259,9 +259,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
 		   <CENTER>
 <table width="500" border="0">
   <tr>
-    <td><div align="right"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&amp;s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+    <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&amp;s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
     <td>&nbsp;</td>
-    <td><div align="left"><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="Kindle" width="174" height="25" border="0" /></a></div></td>
+    <td><div align="center"><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="Kindle" width="174" height="25" border="0" /></a></div></td>
   </tr>
 </table>
 <A HREF="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&s=books"></A>
@@ -326,7 +326,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
 	          <tr>
 	            <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
 	            <td>&nbsp;</td>
-	            <td><div align="left"><a href="http://www.amazon.com/dp/B007WHZRIE"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
+	            <td><div align="center"><a href="http://www.amazon.com/dp/B007WHZRIE"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
               </tr>
             </table>
 	        <a href="javascript:popcontact('pop-up5.htm')">
@@ -380,13 +380,15 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
               <input name="currency_code" type="hidden" id="currency_code" value="USD"/>
             </font></strong></em></p>
           </form>
-          <table width="500" border="0">
-            <tr>
-              <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591967724/qid%3D1098139993/sr%3D11-1/ref%3Dsr%5F11%5F1/104-9384527-0601505"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
-              <td>&nbsp;</td>
-              <td><div align="center"><a href="http://www.amazon.com/dp/B007X0AVKO"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" target="_blank"/></a></div></td>
-            </tr>
-          </table>
+          <div align="center">
+            <table width="500" border="0">
+              <tr>
+                <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591967724/qid%3D1098139993/sr%3D11-1/ref%3Dsr%5F11%5F1/104-9384527-0601505"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                <td>&nbsp;</td>
+                <td><div align="center"><a href="http://www.amazon.com/dp/B007X0AVKO"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" target="_blank"/></a></div></td>
+              </tr>
+              </table>
+          </div>
         <p align="center"><a href="http://www.amazon.com/exec/obidos/ASIN/1591967724/qid=1098139993/sr=11-1/ref=sr_11_1/104-9384527-0601505"></a></p>
         <form action="https://www.e-junkie.com/ecom/fgb.php?c=cart&amp;cl=1&amp;ejc=2" target="ej_ejc" method="post">
         </form>
