--- a/index.htm
+++ b/index.htm
@@ -193,14 +193,20 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
               <!-- currency (USD for Google Checkout USA, GBP for Google Checkout UK. For PayPal: any currency that PayPal supports -->
               <input name="currency_code" type="hidden" id="currency_code" value="USD"/>
 	          </font></strong></em></p>
-	       
-	      </form>
+            <div align="center">
+              <table width="250" height="31" border="0">
+                <tr>
+                  <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591963486/qid=1064849635/sr=1-2/ref=sr_1_2/103-6993674-8547864?v=glance&s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width=179 height=29 x-claris-useimagewidth x-claris-useimageheight border=0 align=bottom /></a><a href="http://www.amazon.com/dp/B007WHS8HQ"target="_blank"><img src="Images/amazon_kindle.png" width="174" height="25" border="0" /></a></div></td>
+                </tr>
+              </table>
+            </div>
+		  </form>
     <div align="center"></div>
           <table width="500" border="0">
             <tr>
               <td><div align="center"></div></td>
               <td>&nbsp;</td>
-              <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591963486/qid=1064849635/sr=1-2/ref=sr_1_2/103-6993674-8547864?v=glance&s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width=179 height=29 x-claris-useimagewidth x-claris-useimageheight border=0 align=bottom /></a><a href="http://www.amazon.com/dp/B007WHS8HQ"target="_blank"><img src="Images/amazon_kindle.png" width="174" height="25" border="0" /></a></div></td>
+              <td><div align="center"></div></td>
             </tr>
           </table>
 </div>
