--- a/index.htm
+++ b/index.htm
@@ -262,14 +262,15 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
               <input name="currency_code" type="hidden" id="currency_code" value="USD"/>
 	          </font></strong></em></p>
           </form>
-<table width="500" border="0">
-  <tr>
-    <td><div align="center"></div></td>
-    <td>&nbsp;</td>
-    <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&amp;s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="Kindle" width="174" height="25" border="0" /></a></div></td>
-    </tr>
-</table>
-<A HREF="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&s=books"></A>
+          <div align="center">
+            <table width="500" border="0">
+              <tr>
+                <td><div align="center"></div></td>
+                <td>&nbsp;</td>
+                <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&amp;s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="Kindle" width="174" height="25" border="0" /></a></div></td>
+              </tr>
+  </table>
+            <A HREF="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&s=books"></A></div>
 	      </TD>
 		  
 	  </div>
