--- a/index.htm
+++ b/index.htm
@@ -196,7 +196,27 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
             <div align="center">
               <table width="250" height="31" border="0">
                 <tr>
-                  <td><div align="center"><a href="http://www.amazon.com/exec/obidos/tg/detail/-/1591963486/qid=1064849635/sr=1-2/ref=sr_1_2/103-6993674-8547864?v=glance&s=books"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width=179 height=29 x-claris-useimagewidth x-claris-useimageheight border=0 align=bottom /></a><a href="http://www.amazon.com/dp/B007WHS8HQ"target="_blank"><img src="Images/amazon_kindle.png" width="174" height="25" border="0" /></a></div></td>
+                  <td><div align="center">
+                    <div align="center">
+                      <table width="500" border="0">
+                        <tr>
+                          <td><div align="center"></div></td>
+                          <td>&nbsp;</td>
+                          <td><div align="center">
+                            <div align="center">
+                              <table width="500" border="0">
+                                <tr>
+                                  <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                                  <td>&nbsp;</td>
+                                  <td><div align="center"><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
+                                </tr>
+                              </table>
+                              <a href="javascript:popcontact('pop-up5.htm')"> </a></div>
+                          </div></td>
+                        </tr>
+                      </table>
+                      <A HREF="http://www.amazon.com/exec/obidos/tg/detail/-/1591966264/qid=1089660005/sr=1-1/ref=sr_1_1/103-4082130-0235030?v=glance&s=books"></A></div>
+                  </div></td>
                 </tr>
               </table>
             </div>
