--- a/index.htm
+++ b/index.htm
@@ -420,7 +420,17 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
             <tr>
               <td><div align="right"></div></td>
               <td>&nbsp;</td>
-              <td><div align="center"><a href="http://www.amazon.com/exec/obidos/ASIN/1591967724/qid%3D1098139993/sr%3D11-1/ref%3Dsr%5F11%5F1/104-9384527-0601505"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a><a href="http://www.amazon.com/dp/B007X0AVKO"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" target="_blank"/></a></div></td>
+              <td><div align="center">
+                <div align="center">
+                  <table width="500" border="0">
+                    <tr>
+                      <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                      <td>&nbsp;</td>
+                      <td><div align="center"><a href="https://www.amazon.com/dp/B007X0AVKO"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
+                    </tr>
+                  </table>
+                  <a href="javascript:popcontact('pop-up5.htm')"> </a></div>
+              </div></td>
             </tr>
           </table>
             
