--- a/index.htm
+++ b/index.htm
@@ -482,7 +482,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
               </tr>
               </table>
           </div>
-  <p align="center"></div>
+  <p align="center">  
+  <p align="center">  
+</div>
 </body>
 
 </html>
