--- a/index.htm
+++ b/index.htm
@@ -100,11 +100,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                   <table width="250" height="31" border="0">
                     <tr>
                       <td><div align="center"><em><strong><font color="#990000" size="4">
-                          <input name="Button2" type="button" id="Button2" onclick="javascript:popcontact('popups/pop-up1.htm')" value="Click for Details    " />
+                          <input name="Button2" type="button" id="Button2" onClick="javascript:popcontact('popups/pop-up1.htm')" value="Click for Details    " />
                       </font></strong></em></div></td>
-                      <td><div align="center"><em><strong><font color="#990000" size="4">
-                          <input name="Button2" type="button" id="Button2" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                      </font></strong></em></div></td>
+                      <td><div align="center"></div></td>
                     </tr>
                   </table>
                 </div>
@@ -156,11 +154,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                 <table width="250" height="31" border="0">
                   <tr>
                     <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button3" type="button" id="Button3" onclick="javascript:popcontact('popups/pop-up2.htm')" value="Click for Details    " />
+                        <input name="Button3" type="button" id="Button3" onClick="javascript:popcontact('popups/pop-up2.htm')" value="Click for Details    " />
                     </font></strong></em></div></td>
-                    <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button3" type="button" id="Button3" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                    </font></strong></em></div></td>
+                    <td><div align="center"></div></td>
                   </tr>
                 </table>
               </div>
@@ -206,7 +202,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                             <div align="center">
                               <table width="500" border="0">
                                 <tr>
-                                  <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                                  <td><div align="right"></div></td>
                                   <td>&nbsp;</td>
                                   <td><div align="center"><a href="https://www.amazon.com/dp/B007WHS8HQ"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
                                 </tr>
@@ -244,11 +240,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                 <table width="250" height="31" border="0">
                   <tr>
                     <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button4" type="button" id="Button4" onclick="javascript:popcontact('popups/pop-up3.htm')" value="Click for Details    " />
+                        <input name="Button4" type="button" id="Button4" onClick="javascript:popcontact('popups/pop-up3.htm')" value="Click for Details    " />
                     </font></strong></em></div></td>
-                    <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button4" type="button" id="Button4" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                    </font></strong></em></div></td>
+                    <td><div align="center"></div></td>
                   </tr>
                 </table>
               </div>
@@ -291,7 +285,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                   <div align="center">
                     <table width="500" border="0">
                       <tr>
-                        <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                        <td><div align="right"></div></td>
                         <td>&nbsp;</td>
                         <td><div align="center"><a href="http://www.amazon.com/dp/B007WWK9IW"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
                       </tr>
@@ -316,11 +310,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                 <table width="250" height="31" border="0">
                   <tr>
                     <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button5" type="button" id="Button5" onclick="javascript:popcontact('popups/pop-up4.htm')" value="Click for Details    " />
+                        <input name="Button5" type="button" id="Button5" onClick="javascript:popcontact('popups/pop-up4.htm')" value="Click for Details    " />
                     </font></strong></em></div></td>
-                    <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button5" type="button" id="Button5" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                    </font></strong></em></div></td>
+                    <td><div align="center"></div></td>
                   </tr>
                 </table>
               </div>
@@ -359,7 +351,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
 	      <div align="center">
 	        <table width="500" border="0">
 	          <tr>
-	            <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+	            <td><div align="right"></div></td>
 	            <td>&nbsp;</td>
 	            <td><div align="center"><a href="http://www.amazon.com/dp/B007WHZRIE"target="_blank"><img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
               </tr>
@@ -378,11 +370,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                 <table width="250" height="31" border="0">
                   <tr>
                     <td><em><strong><font color="#990000" size="4">
-                    <input name="Button6" type="button" id="Button6" onclick="javascript:popcontact('popups/pop-up5.htm')" value="Click for Details    " />
+                    <input name="Button6" type="button" id="Button6" onClick="javascript:popcontact('popups/pop-up5.htm')" value="Click for Details    " />
                     </font></strong></em></td>
-                    <td><div align="center"><em><strong><font color="#990000" size="4">
-                        <input name="Button6" type="button" id="Button6" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                    </font></strong></em></div></td>
+                    <td><div align="center"></div></td>
                   </tr>
                 </table>
               </div>
@@ -418,7 +408,7 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
           <div align="center">
             <table width="500" border="0">
               <tr>
-                <td><div align="right"><a href="http://www.amazon.com/exec/obidos/ASIN/1591964997/002-1355629-2002408"target="_blank"><img src="Images/amazon.gif" alt="amazon.com" width="179" height="29" x-claris-useimagewidth="x-claris-useimagewidth" x-claris-useimageheight="x-claris-useimageheight" border="0" align="bottom" /></a></div></td>
+                <td><div align="right"></div></td>
                 <td>&nbsp;</td>
                 <td><div align="center"><a href="https://www.amazon.com/dp/B007X0AVKO"target="_blank"> <img src="Images/amazon_kindle.png" alt="kindle" width="174" height="25" border="0" /></a></div></td>
               </tr>
@@ -438,11 +428,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
                 <table width="250" height="31" border="0">
                   <tr>
                     <td><div align="center"><em><strong><font color="#990000" size="4">
-                      <input name="Button" type="button" id="Button" onclick="javascript:popcontact('popups/pop-up6.htm')" value="Click for Details    " />
+                      <input name="Button" type="button" id="Button" onClick="javascript:popcontact('popups/pop-up6.htm')" value="Click for Details    " />
                     </font></strong></em></div></td>
-                    <td><div align="center"><em><strong><font color="#990000" size="4">
-                      <input name="Button" type="button" id="Button" onclick="javascript:return EJEJC_lc(this.parentNode);" value="  Add to Cart    " />
-                    </font></strong></em></div></td>
+                    <td><div align="center"></div></td>
                   </tr>
                 </table>
               </blockquote>
