--- a/popups/pop-up5.htm
+++ b/popups/pop-up5.htm
@@ -58,9 +58,8 @@ body {
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td><span class="style3"><span class="style4">$4.99</span> <span class="style6">each</span></span></td>
-    <td><p class="style3"><img src="../Images/Paypal.gif" width="96" height="48" border="1" /></p>
-    <p class="style3">&nbsp;</p></td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
