--- a/popups/pop-up6.htm
+++ b/popups/pop-up6.htm
@@ -58,7 +58,7 @@ body {
         <h3 class="style3">Some scholars believe the first 5 Books of the Bible were NOT written by Moses, but were a composite of 4 different sources, known as the JEPD sources. Here is a full text of the KJV with each of these sources highlighted in different colors. The book comes with a full introduction and explanation of this intriguing theory. A must for the serious Bible student.</h3>
         <p class="style3"><span class="style4"><strong><span class="style18">* eBook  Only</span></strong></span></p>
         <h4 class="style3 style4">* * Please be advised that the colorized text of the Color Coded Bible is only viewable with color display devises such as the Kindle Fire. Black & White and Gray scale devises will not provide the full effect of the Color Coded Bible. All PDF versions works fine. </h4>
-        <pre><a href="../Images/adobe.png"></a><a href="http://get.adobe.com/reader/otherversions/"><img src="../Images/adobe.png" width="158" height="39" border="0" /></a></pre></td>
+        <pre><a href="../Images/adobe.png"></a><a href="http://get.adobe.com/reader/otherversions/"></a></pre></td>
     <td width="217" align="left" valign="middle"><div align="center"><img src="../Images/Pentateuch.jpg" width="203" height="350" border="1" /></div></td>
   </tr>
   <tr>
@@ -69,9 +69,8 @@ body {
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td><span class="style3"><span class="style4">$2.99</span> <span class="style6">each</span></span></td>
-    <td><p class="style3"><img src="../Images/Paypal.gif" width="96" height="48" border="1" /></p>
-    </td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
