--- a/index.htm
+++ b/index.htm
@@ -369,9 +369,9 @@ src="https://www.e-junkie.com/ecom/box.js"></script>
               <div align="center">
                 <table width="250" height="31" border="0">
                   <tr>
-                    <td><em><strong><font color="#990000" size="4">
+                    <td><div align="center"><em><strong><font color="#990000" size="4">
                     <input name="Button6" type="button" id="Button6" onClick="javascript:popcontact('popups/pop-up5.htm')" value="Click for Details    " />
-                    </font></strong></em></td>
+                    </font></strong></em></div></td>
                     <td><div align="center"></div></td>
                   </tr>
                 </table>
